2008-04-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  In the refactoring, the code that handles errors from do_check
	  and stops going to setup got lost.  Put it back so that a
	  component doesn't actually go to setup if its do_check does not
	  want it to.

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/wizard/overlaystep.py:
	Do not add a overlay component if we're missing elements/python modules.
	Fixes #914

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	Rubber-stamped by Arek

	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	* flumotion/component/producers/bttv/bttv_wizard.py:
	* flumotion/component/producers/soundcard/soundcard_wizard.py:
	* flumotion/component/producers/webcam/webcam_wizard.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/productionsteps.py:
	Introduce waitForTask/taskFinished methods on the configuration wizard
	which blocks the interface and prevents you from clicking next.
	This replaces the old block_next(True/False) calls which were
	dangerous since they weren't stacked.
	Fixes #917

2008-04-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-nagios.in:
	  Don't use GStreamer.  as a side effect, makes -h/--help work.

2008-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/dialogs.py:
	  Add 2008.

2008-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/producers/looper/looper.py:
	* flumotion/worker/checks/check.py:
	  Fix some translatables.

2008-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	  Fix wrong translation string.

2008-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	* flumotion/manager/admin.py:
	  Add a message to some asserts.
