@@ -17,6 +17,7 @@ EXTRA_DIST = \
 	flumotion.spec \
 	flumotion.doap \
 	misc/pycheckerhelp.py \
+	misc/validate-config.py \
 	intltool-extract.in \
 	intltool-merge.in \
 	intltool-update.in
